# fastapi-101

./: main.py
fastapi_02/: pyproject.toml
fastapi_03/: main.py
fastapi_04/: main.py
tests/: test_fastapi_101.py
